--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     
 <div id="top-nav">
 
+    <a href="{{url_for('index')}}">Home</a>
+    <a href="{{url_for('signup')}}">Signup</a>
 </div>
     {% block content %}
         
