made the hashing and checking work finally

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 <div id="top-nav">
 
     <a href="{{url_for('index')}}">Home</a>
+    <a href="{{url_for('login')}}">Login</a>
     <a href="{{url_for('signup')}}">Signup</a>
 </div>
     {% block content %}
