--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,19 @@
     <a href="{{url_for('index')}}">Home</a>
     <a href="{{url_for('login')}}">Login</a>
     <a href="{{url_for('signup')}}">Signup</a>
+    <a href="{{url_for('logout')}}">Logout</a>
 </div>
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
     {% block content %}
         
     {% endblock content %}
