--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}
-    Home page
+    Login
 {% endblock title %}
 
+{% if errors %}
+    {{errors}}
+{% endif %}
 
 {% block content %}
-<h1>Welcome to flavour fusion</h1>
+<h1>User profile</h1>
+<br>
+{% if user %}
+    <h2>Hello {{user.username}}</h2>
+{% endif %}
+
+
 
 {% endblock  %}
 
