--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <a href="{{url_for('recipes')}}">Recipes</a>
     {% if current_user.is_authenticated %}
         <a href="{{url_for('profile')}}">Profile</a>        
+        <a href="{{url_for('recipeBuilder')}}">Recipe Builder</a>        
         <a href="{{url_for('logout')}}">Logout</a>
     {% else %}
         <a href="{{url_for('login')}}">Login</a>
